[package]
name = "picontrol"
license = "MIT"
version = "0.2.0"
authors = ["Enrico Mezzato"]
description = "A library to access the RevolutionPi industrial PLC. A console application similar to the piTest command line tool is provided as an example."
edition = "2018"
repository = "https://github.com/mezzato/picontrol-rs"
# build = "build.rs"

# [build-dependencies]
# bindgen = "*"

[profile.release]
# debug = true

[dependencies]
nix = "0.13.0"
clap = "2.32.0"
byteorder = "1.3.1"
